--- a/test/browser/index.html
+++ b/test/browser/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id="mocha"></div>
-  <script src="http://localhost:7979/socket.io/socket.io.js" type="text/javascript"></script>
+  <script src="/socket.io/socket.io.js" type="text/javascript"></script>
   <script src="../../node_modules/babel-polyfill/browser.js" type="text/javascript"></script>
   <script src="../../node_modules/mocha/mocha.js" type="text/javascript"></script>
   <script>mocha.setup('bdd');</script>
@@ -15,7 +15,36 @@
   <script src="../../dist/browser.test.js" type="text/javascript"></script>
   <script>
     onload = function(){
-      mocha.run();
+      var runner = mocha.run();
+      var failedTests = [];
+
+      runner.on('end', function(){
+        window.mochaResults = runner.stats;
+        window.mochaResults.reports = failedTests;
+      });
+
+      runner.on('fail', logFailure);
+
+      function logFailure(test, err) {
+        var flattenTitles = function(test) {
+          var titles = [];
+
+          while (test.parent.title) {
+            titles.push(test.parent.title);
+            test = test.parent;
+          }
+
+          return titles.reverse();
+        };
+
+        failedTests.push({
+          name: test.title,
+          result: false,
+          message: err.message,
+          stack: err.stack,
+          titles: flattenTitles(test)
+        });
+      }
     };
   </script>
 </body>
