--- a/browser/index.html
+++ b/browser/index.html
@@ -3,16 +3,16 @@
 <head>
   <title>Mocha</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <link rel="stylesheet" href="../../node_modules/mocha/mocha.css" />
+  <link rel="stylesheet" href="../node_modules/mocha/mocha.css" />
 </head>
 <body>
   <div id="mocha"></div>
   <script src="/socket.io/socket.io.js" type="text/javascript"></script>
-  <script src="../../node_modules/babel-polyfill/browser.js" type="text/javascript"></script>
-  <script src="../../node_modules/mocha/mocha.js" type="text/javascript"></script>
+  <script src="../node_modules/babel-polyfill/browser.js" type="text/javascript"></script>
+  <script src="../node_modules/mocha/mocha.js" type="text/javascript"></script>
   <script>mocha.setup('bdd');</script>
-  <script src="../../dist/feathers.js" type="text/javascript"></script>
-  <script src="../../dist/browser.test.js" type="text/javascript"></script>
+  <script src="../dist/feathers.js" type="text/javascript"></script>
+  <script src="../dist/browser.test.js" type="text/javascript"></script>
   <script>
     onload = function(){
       var runner = mocha.run();
