--- a/browser/index.html
+++ b/browser/index.html
@@ -12,7 +12,7 @@
   <script src="../node_modules/mocha/mocha.js" type="text/javascript"></script>
   <script>mocha.setup('bdd');</script>
   <script src="../dist/feathers.js" type="text/javascript"></script>
-  <script src="../dist/browser.test.js" type="text/javascript"></script>
+  <script src="./test.dist.js" type="text/javascript"></script>
   <script>
     onload = function(){
       var runner = mocha.run();
