--- a/browser/index.html
+++ b/browser/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <div id="mocha"></div>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/core-js/2.5.7/core.min.js" type="text/javascript"></script>
   <script src="/socket.io/socket.io.js" type="text/javascript"></script>
-  <script src="../node_modules/babel-polyfill/browser.js" type="text/javascript"></script>
   <script src="../node_modules/mocha/mocha.js" type="text/javascript"></script>
   <script>mocha.setup('bdd');</script>
   <script src="../dist/feathers.js" type="text/javascript"></script>
